--- a/index/style.css
+++ b/index/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 1.2rem;
     line-height: 1.6em;
     margin: 0;
-    /* overflow-x: hidden; */
+    overflow-x: hidden; 
     
 }
 h1 {
