--- a/index/style.css
+++ b/index/style.css
@@ -4,7 +4,6 @@ body {
     font-size: 1.2rem;
     line-height: 1.6em;
     margin: 0;
-    overflow-x: hidden; 
     
 }
 h1 {
@@ -38,7 +37,7 @@ label{
     left: 0;
     top: 0;
     right: 0;
-
+    z-index: 10000;
 }
 
 .header a {
@@ -95,18 +94,53 @@ label{
     margin: 0 auto;
 }
 
-/* FORM-CONTACTO */
-.contact form{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin-left: 7rem;
-    margin-right: 7rem; 
-}
-.contact form button{
+.diagrama-proyecto{
     display: flex;
     align-items: center;
+    justify-content: center; 
+    flex-direction: column;
+}
+.circuito-proyecto{
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    flex-direction: column;
 }
 
+
+
+
+/* FORM-CONTACTO */
+:root{
+    --blue-1: #2B34D9;
+    --blue-2: #6B71F2;
+    --blue-3: #0D17D9;
+}
+
+.fw-bold{
+    color: var(--blue-1)!important;
+}
+.bi{
+    color: var(--blue-2)
+}
+.btn-color-main{
+    color: #fff;
+    background-color: var(--blue-2);
+}
+
+.form-control{
+    border: 1px solid #6b71f275;
+}
+.form-control:focus{
+    border: 1px solid #6B71F2;
+    box-shadow: 0 0 0 0.25rem rgb(107 113 242 / 25%);;
+}
+@media (min-width: 1200px) {
+    .formulario{
+        padding-left: 15%;
+        padding-right: 15%;
+    }
+}
 
 
 
